--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<center>
 <p>
   <b>Name:</b><br />
   <%= @admin.name %>
@@ -21,3 +21,4 @@
 <b><%= link_to 'View Administrators', admins_path %> </b>
 
 
+</center>
