--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Listing admins</h1>
-
+<center>
+<h1>Route Planner Pro Administrators</h1>
 <table class="hovertable2">
   <tr>
     <th>Name</th>
@@ -25,3 +25,4 @@
 <br />
 
 <%= link_to 'New Admin', new_admin_path %>
+</center>
